# vr

./: .gitignore  CMakeLists.txt  README.md  package-info.json  package-info.json.in  vr.hrtf.example.maxpat
extensions/: vr~.mxe  vr~.mxe64
extensions/vr~.mxo/Contents/: Info.plist
extensions/vr~.mxo/Contents/MacOS/: vr~
help/: vr.ambi2hrtf~.maxhelp  vr.maxhelp  vr.steam.maxhelp  vr~.maxhelp
patchers/: vr.360.maxpat  vr.hrtf.example.maxpat  vr.htft.example.maxpat
source/: al_max.h  roadmap.md
source/projects/vr/: CMakeLists.txt  jit.gl.support.h  vr.cpp
source/vr/: vr.cpp  vr.vcxproj
source/vr/vr.xcodeproj/: project.pbxproj
source/vr/vr.xcodeproj/project.xcworkspace/xcuserdata/grrrwaaa.xcuserdatad/: UserInterfaceState.xcuserstate
source/vr/vr.xcodeproj/xcuserdata/grrrwaaa.xcuserdatad/xcschemes/: max-external.xcscheme
source/vr_oculus~/: vr~.vcxproj
source/vr_oculus~/AudioSDK/: LICENSE.txt
source/vr~/: vr~.cpp  vr~.vcxproj
source/vr~/steamaudio_api/include/: phonon.h
source/vr~/vr~.xcodeproj/: project.pbxproj
source/vr~/vr~.xcodeproj/project.xcworkspace/xcuserdata/grrrwaaa.xcuserdatad/: UserInterfaceState.xcuserstate
